--- a/AUTHORS
+++ b/AUTHORS
@@ -44,6 +44,7 @@ Patches have also been contributed by:
   Cole Robinson        <crobinso@redhat.com>
   Anton Protopopov     <aspsk2@gmail.com>
   Stefan de Konink     <dekonink@kinkrsoftware.nl>
+  Kaitlin Rupert       <kaitlin@linux.vnet.ibm.com>
 
   [....send patches to get your name here....]
 
