--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jun 25 13:40:25 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* python/types.c: patch from Ryan Scott to remove misplaced verbosity
+	  when compiling in debug mode.
+
 Wed Jun 25 10:52:05 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* configure.in NEWS libvirt.spec* doc/* po/*: making libvirt-0.4.4
