ALlow OOM tests to be parallelized

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jul  7 11:02:56 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* tests/testutils.c: Allow OOM testing to be parallelized by
+	setting VIR_TEST_MP=1
+
 Mon Jul  7 11:59:07 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* proxy/libvirt_proxy.c: fix a compilation problem without Xen
