--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Tue Jul  8 18:42:56 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* docs/drvqemu.html.in, docs/formatnetwork.html.in: Fix three
+	typos pointed out by Anton Protopopov
+
+Tue Jul  8 13:02:56 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* docs/libvirt.rng: Updated schema to follow latest XML syntax
+	supported by drivers. Based off work by John Levon
+	* tests/qemuxml2argvdata/qemuxml2argv-input-xen.xml: Fix boot
+	syntax to comply with schema
+
 Mon Jul  7 12:46:56 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/openvz_driver.c: Don't cast pointers to ints, and fix
