Adds Evgeniy to AUTHORS list Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -45,6 +45,7 @@ Patches have also been contributed by:
   Anton Protopopov     <aspsk2@gmail.com>
   Stefan de Konink     <dekonink@kinkrsoftware.nl>
   Kaitlin Rupert       <kaitlin@linux.vnet.ibm.com>
+  Evgeniy Sokolov      <evg@openvz.org>
 
   [....send patches to get your name here....]
 
