domain name validation fix * docs/libvirt.rng: domain name validation fix by John Levon * AUTHORS: add John Levon Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -46,6 +46,7 @@ Patches have also been contributed by:
   Stefan de Konink     <dekonink@kinkrsoftware.nl>
   Kaitlin Rupert       <kaitlin@linux.vnet.ibm.com>
   Evgeniy Sokolov      <evg@openvz.org>
+  John Levon           <levon@movementarian.org>
 
   [....send patches to get your name here....]
 
