--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jul 10 09:58:42 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* docs/libvirt.rng: domain name validation fix by John Levon
+	* AUTHORS: add John Levon
+
 Thu Jul 10 09:50:39 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/openvz_conf.c src/openvz_conf.h src/openvz_driver.c: new
