fixed John address Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -46,7 +46,7 @@ Patches have also been contributed by:
   Stefan de Konink     <dekonink@kinkrsoftware.nl>
   Kaitlin Rupert       <kaitlin@linux.vnet.ibm.com>
   Evgeniy Sokolov      <evg@openvz.org>
-  John Levon           <levon@movementarian.org>
+  John Levon           <john.levon@sun.com>
 
   [....send patches to get your name here....]
 
