--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Jul 11 10:55:59 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/qemu_conf.c: Fix booting off CDROM devices
+	* tests/qemuxml2argvdata/qemuxml2argv-disk-drive-boot-*,
+	tests/qemuxml2argvtest.c: New test cases for booting off
+	CDROM with QEMU
+
 Fri Jul 11 10:50:59 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* libvirt.spec.in, qemud/Makefile.am: Rename installed polkit
