--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jul 11 17:37:59 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/test.c: Convert to the new network XML apis
+
 Fri Jul 11 15:49:59 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	Generic APIs for domain XML configuration
