--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Jul 11 17:39:59 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/test.c, src/test.h: Convert to the new domain XML apis
+	* docs/testdomfc4.xml: Update for new syntax
+	* docs/testnodeinline.xml: Demo of inline domain & network XML
+	* tests/read-non-seekable: Update to have OS block
+
 Fri Jul 11 17:37:59 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/test.c: Convert to the new network XML apis
