--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jul 12 14:52:59 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/qemu_conf.c: Remove unneccessary c-ctype.h include
+
 Fri Jul 11 20:32:59 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_conf.c, src/qemu_conf.h, src/qemu_driver.c: Switch
