--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jul 21 09:29:22 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/openvz_driver.c: patch from Evgeniy Sokolov avoiding domain
+	  lookups based on ID as this doesn't work for a stopped domain.
+
 Sat Jul 19 09:41:53 CEST 2008 Jim Meyering <meyering@redhat.com>
 
 	remove unnecessary "V = NULL;" stmts after VIR_FREE(V)
