--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jul 21 11:47:08 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/xen_unified.c: fix a leak in xenUnifiedOpen
+
 Mon Jul 21 10:07:08 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/openvz_driver.c: patch from Evgeniy Sokolov to get OpenVZ
