--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Fri Jul 25 10:46:25 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* include/libvirt/libvirt.h include/libvirt/libvirt.h.in:
+	  remove Xen centric comments patch from Guido Günther
+	* docs/apibuild.py: ignore VIR_DEPRECATED
+	* docs/libvirt-*.xml docs/html/libvirt-*.html: regenerated the
+	  documentation for the API
+
 Fri Jul 25 10:39:54 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/qemu_driver.c: Guido Trotter pointed out a wrong open() failure
